# AoC-2025

day1/: CMakeLists.txt
day1/src/CodeSolver/: CodeSolver.h
day1/src/FileHandler/: FileHandler.cpp
day2/: CMakeLists.txt
day2/src/: main.cpp
day2/src/CodeSolver/: CodeSolver.cpp
day2/src/GiftShop/: GiftShop.cpp  GiftShop.h
day3/: CMakeLists.txt
day3/src/: main.cpp
day3/src/BatteryBank/: BatteryBank.cpp  BatteryBank.h
day4/: CMakeLists.txt
day4/src/: main.cpp
day4/src/FileHandler/: FileHandler.h
day4/src/PrintingDepartment/: PrintingDepartment.cpp  PrintingDepartment.h
day5/: CMakeLists.txt
day5/src/: main.cpp
day5/src/Cafeteria/: Cafeteria.cpp  Cafeteria.h
day6/: CMakeLists.txt
day6/src/: main.cpp
day6/src/FileHandler/: FileHandler.h
day6/src/TrashCompactor/: TrashCompactor.cpp  TrashCompactor.h
day7/: CMakeLists.txt
day7/src/: main.cpp
day7/src/FileHandler/: FileHandler.cpp
day7/src/Laboratory/: Laboratory.cpp  Laboratory.h
src/: main.cpp
src/CodeSolver/: CodeSolver.cpp
